--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+  get: ^4.6.1
+  provider: ^6.0.2
+  connectivity_plus: ^2.2.1
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
   flutter:
     sdk: flutter
 
