--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   connectivity_plus: ^2.2.1
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  modal_progress_hud_alt: ^1.0.0
   flutter:
     sdk: flutter
 
