--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   modal_progress_hud_alt: ^1.0.0
+  pull_to_refresh: ^2.0.0
   flutter:
     sdk: flutter
 
